--- a/mainServer/wwwroot/Dashboard/UserDashboard/sales.html
+++ b/mainServer/wwwroot/Dashboard/UserDashboard/sales.html
@@ -142,6 +142,37 @@
     </div>
     <!-- /.row -->
 
+
+    <form enctype="multipart/form-data" action="">
+        <div class="form-group row">
+            <label asp-for="photo"  class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <div class="custom-file">
+                    <input asp-for = "photo" class="form-control custom-file-input">
+                    <label class="custom-file-label">Choose File.......</label>
+                </div>
+            </div>
+        </div>
+    </form>
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="modal fade" id="modal-new-pkg">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -222,6 +253,7 @@
                         $('<th>').text('Quantity'),
                         $('<th>').text('Status'),
                         $('<th>').text('Upload Date'),
+                        $('<th>').text('Image Name'),
                         $('<th>').text('Number of orders')
                     )
                 );
