--- a/mainServer/wwwroot/Dashboard/UserDashboard/sales.html
+++ b/mainServer/wwwroot/Dashboard/UserDashboard/sales.html
@@ -35,7 +35,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="comb1">Category</label>
-                                    <input list=units name="category" name="unit" class="form-control">
+                                    <input list=units name="category"  class="form-control">
                                         <datalist id=units>
                                             <option value="Heart Drugs"></option>
                                             <option value="Everyday Drugs"></option>
@@ -52,9 +52,9 @@
                                     <input type="text" name="per_unit_price" class="form-control" id="pkgnnm" placeholder="Enter package price">
                                 </div>
                                 <div class="form-group">
-                                    <label for="comb1">Remark</label>
-                                    <input list=units name="remark" class="form-control">
-                                        <datalist id=units>
+                                    <label for="remark_list">Remark</label>
+                                    <input list="remark_list" name="remark" class="form-control">
+                                        <datalist id="remark_list">
                                             <option value="sale"></option>
                                             <option value="donate"></option>
                                         </datalist>
