--- a/mainServer/wwwroot/Dashboard/UserDashboard/profile.html
+++ b/mainServer/wwwroot/Dashboard/UserDashboard/profile.html
@@ -12,12 +12,15 @@
 <br><br>
 <section class="content-header">
     <body style="margin-left: 15px;">
-        <p>Email:</p>
+        <h1>Email:</h1>
         <p id="email"></p>
         <br>
-        <p>Address:</p>
+        <h1>Address:</h1>
         <b></b>
         <p id="address"></p>
+        <br>
+        <h1>Phone:</h1>
+        <p id="phone"></p>
         <br>
         <a  class="btn btn-outline-secondary" data-toggle="modal" data-target="#modal-new-pkg">Add Address</a>
         
@@ -40,15 +43,19 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="pkgnm">Street Address</label>
-                            <input type="text" id="street" class="form-control"  placeholder="Enter package name">
+                            <input type="text" id="street" class="form-control"  placeholder="Enter Street Address">
                         </div>
                         <div class="form-group">
                             <label for="pkgnm">Sadar/Upazila</label>
-                            <input type="text" id="sadarupazilla" class="form-control"  placeholder="Enter package price">
+                            <input type="text" id="sadarupazilla" class="form-control"  placeholder="Enter Sadar/Upazila">
                         </div>
                         <div class="form-group">
                             <label for="pkgnm">District</label>
-                            <input type="text" id="district" class="form-control"  placeholder="Enter package price">
+                            <input type="text" id="district" class="form-control"  placeholder="Enter District Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="pkgnm">Phone</label>
+                            <input type="text" id="phone_no" class="form-control"  placeholder="Enter Phone Number">
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -63,28 +70,37 @@
 </section>
 
 
+
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+
 <script>
     function AddressFunc(){
 
         var street = document.getElementById('street').value;
         var sadarupazilla = document.getElementById('sadarupazilla').value;
         var district = document.getElementById('district').value;
+        var phone = document.getElementById('phone_no').value;
+        console.log(phone);
         
         window.setTimeout(function(){
-            window.location.href = "https://localhost:5001/Home/AddAddress?street=" +street+"&sadarupazilla="+sadarupazilla+"&district="+district;;
+            window.location.href = "https://localhost:5001/Home/AddAddress?street=" +street+"&sadarupazilla="+sadarupazilla+"&district="+district+"&phone="+phone;
 
         }, 1);
 
     }
 
 
-
+    LoadProfile();
     function LoadProfile(){
-        ajaz({
+        $.ajax({
             type: "GET",
             url: "/Home/ProfileData",
             success: function(response){
-
+                document.getElementById('address').innerHTML=response[0].user_address;
+                document.getElementById('email').innerHTML = response[0].email;
+                document.getElementById('phone').innerHTML = response[0].phone;
             },
             failure: function(response){
 
