--- a/mainServer/wwwroot/Dashboard/UserDashboard/sales.html
+++ b/mainServer/wwwroot/Dashboard/UserDashboard/sales.html
@@ -186,24 +186,20 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Edit Host Data</h4>
+                    <h4 class="modal-title">Edit</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="pkgnm">Product Name</label>
-                        <input type="text" id="host_id_external" class="form-control" id="pkgnm" placeholder="Enter package name">
-                    </div>
-                    <div class="form-group">
-                        <label for="comb1">Unit *</label>
-                        <input list=units id="comb1" name="unit" class="form-control">
-                            <datalist id=units>
-                                <option value="minute"></option>
-                                <option value="UC"></option>
-                            </datalist>
+                        <input type="text" id="product_name" class="form-control" id="pkgnm" placeholder="Enter package name">
                     </div>
                     <div class="form-group">
                         <label for="pkgnm">Quantity</label>
-                        <input type="text" id="category_id" class="form-control" id="pkgnnm" placeholder="Enter package price">
+                        <input type="text" id="quantity" class="form-control" id="pkgnnm" placeholder="Enter package price">
+                    </div>
+                    <div class="form-group">
+                        <label for="pkgnm">Per Unit Price</label>
+                        <input type="text" id="per_unit_pricee" class="form-control" id="pkgnnm" placeholder="Enter package price">
                     </div>
 
                 </div>
@@ -283,9 +279,9 @@
                             //$('<button type="button" class="btn btn-default btn-sm" onclick="SendDeleteID(hello)"><i class="fa fa-trash-o">'),
                             //$('<a data-id="' + item.host_id_external + '" href="#" class="linkdelete"><i class="fa fa-trash-o">'),
                             //$('<a data-id="Hello890" href="#" class="linkdelete"><i class="fa fa-edit">'),
-                            $('<a href="#" onclick="SendDeleteID(\'' + item.host_id_external + '\');"><i class="fa fa-trash-o">'),
+                            $('<a href="#" onclick="SendDeleteID(\'' + item.product_id + '\');"><i class="fa fa-trash-o">'),
                             //$('<td class="mailbox-name">'),
-                            $('<a type="button" onclick="SendEditID(\'' + item.host_id_external + '\');" class="btn btn-default btn-sm" data-toggle="modal" data-target="#modal-new-pkg"><i class="fa fa-edit">')
+                            $('<a type="button" onclick="SendEditID(\'' + item.product_id + '\');" class="btn btn-default btn-sm" data-toggle="modal" data-target="#modal-new-pkg"><i class="fa fa-edit">')
 
                         ).appendTo(sales);
                         serial_no++;
@@ -323,7 +319,7 @@
     function SendDeleteID(deleteID) {
         console.log("this is SendDeleteID" + deleteID);
         $.ajax({
-            url: "/Hosts/HostRowDelete?host_id_external=" + deleteID,
+            url: "/sales/salesDel?p_id=" + deleteID,
             // data: {
             //     deleteID: deleteID
             // },
@@ -334,7 +330,7 @@
                 console.log("successful");
 
                 eval(result.Script);
-                LoadHostList('Default');
+                LoadSalesList('Default');
 
             },
             error: function() {
@@ -346,13 +342,15 @@
 
     function SendEditID(editID) {
         editID_global = editID;
+        console.log(editID);
         $.ajax({
             type: "GET",
-            url: "/Hosts/GetHostDataForEdit?host_id_external=" + editID,
+            url: "/Sales/GetProductDataForEdit?p_id=" + editID,
             success: function(response) {
                 $.each(response, function(i, item) {
-                    document.getElementById("host_id_external").value = item.host_id_external;
-                    document.getElementById("host_name").value = item.host_name;
+                    document.getElementById("product_name").value = item.product_name;
+                    document.getElementById("quantity").value = item.quantity;
+                    document.getElementById("per_unit_pricee").value = item.per_unit_price;
                 });
             },
             failure: function(response) {
@@ -363,28 +361,26 @@
 
 
     function EditRow() {
-        var host_id_external = document.getElementById("host_id_external").value;
-        var host_name = document.getElementById("host_name").value;
-        var category_id = document.getElementById("category_id").value;
-        var access_id = document.getElementById("access_id").value;
+        var p_name = document.getElementById("product_name").value;
+        var quan = document.getElementById("quantity").value;
+        var p_price = document.getElementById("per_unit_pricee").value;
 
         console.log(editID_global);
 
 
         $.ajax({
-            url: "/Hosts/EditHostRow",
+            url: "/Sales/EditPdata",
             data: {
-                host_id_external: host_id_external,
-                host_name: host_name,
-                category_id: category_id,
-                access_id: access_id,
-                editID: editID_global
+                product_name: p_name,
+                quantity: quan,
+                per_unit_price: p_price,
+                product_id : editID_global
             },
             type: "Post",
             dataType: "Json",
             success: function(result) {
                 eval(result.Script);
-                LoadHostList('Default');
+                LoadSalesList('Default');
 
             },
             error: function() {
